# RANSAC

./: CMakeLists.txt  README.md
examples/: main.cpp
include/algorithms/: i_ransac.hpp  linear_model.hpp  ransac.hpp
